--- a/static/pages/adminlog.html
+++ b/static/pages/adminlog.html
@@ -10,22 +10,31 @@
             width: 50px;
             height: 25px;
         }
+
+        header {
+            width: 100%;
+            height: 100px;
+            background-color: deepskyblue;
+            color: black;
+        }
     </style>
 </head>
 
 <body>
-    <nav>
-        <a href="main">Główna</a>
-        <a href="login">Login</a>
-        <a href="register">Rejestracja</a>
-        <a href="admin">Admin</a>
-        <a href="logout">Wyloguj</a>
-    </nav>
-    <nav>
-        <a href="sort" class="bt">sort</a>
-        <a href="gender" class="bt">gender</a>
-        <a href="show" class="bt">show</a>
-    </nav>
+    <header>
+        <nav>
+            <a href="main">Główna</a>
+            <a href="login">Login</a>
+            <a href="register">Rejestracja</a>
+            <a href="admin">Admin</a>
+            <a href="logout">Wyloguj</a>
+        </nav>
+        <nav>
+            <a href="sort" class="bt">sort</a>
+            <a href="gender" class="bt">gender</a>
+            <a href="show" class="bt">show</a>
+        </nav>
+    </header>
 </body>
 
 </html>
