--- a/static/pages/adminunlog.html
+++ b/static/pages/adminunlog.html
@@ -5,15 +5,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin</title>
+    <style>
+        header {
+            width: 100%;
+            height: 100px;
+            background-color: deepskyblue;
+            color: black;
+        }
+    </style>
 </head>
 
 <body>
-    <nav>
-        <a href="main">Główna</a>
-        <a href="login">Login</a>
-        <a href="register">Rejestracja</a>
-        <a href="admin">Admin</a>
-    </nav>
+    <header>
+        <nav>
+            <a href="main">Główna</a>
+            <a href="login">Login</a>
+            <a href="register">Rejestracja</a>
+            <a href="admin">Admin</a>
+        </nav>
+    </header>
 </body>
 
 </html>
