--- a/static/pages/login.html
+++ b/static/pages/login.html
@@ -5,25 +5,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Logowanie</title>
+    <style>
+        header {
+            width: 100%;
+            height: 100px;
+            background-color: deepskyblue;
+            color: black;
+        }
+    </style>
 </head>
 
 <body>
-    <nav>
-        <a href="main">Główna</a>
-        <a href="login">Login</a>
-        <a href="register">Rejestracja</a>
-        <a href="admin">Admin</a>
-    </nav>
-    <form method="POST" action="/loginadm">
-        <label for="login">Login :</label>
-        <input type="text" name="login" required>
-        <br>
-        <label for="haslo">Hasło :</label>
-
-        <input type="password" name="haslo" required>
-        <br>
-        <button type="submit">Submit</button>
-    </form>
+    <header>
+        <nav>
+            <a href="main">Główna</a>
+            <a href="login">Login</a>
+            <a href="register">Rejestracja</a>
+            <a href="admin">Admin</a>
+        </nav>
+        <form method="POST" action="/loginadm">
+            <label for="login">Login: </label>
+            <input type="text" name="login" required>
+            <br>
+            <label for="haslo">Hasło: </label>
+            <input type="password" name="haslo" required>
+            <br>
+            <button type="submit">Zaloguj</button>
+        </form>
+    </header>
 </body>
 
 </html>
