--- a/static/pages/main.html
+++ b/static/pages/main.html
@@ -5,6 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Główna</title>
+    <style>
+        header {
+            width: 100%;
+            height: 100px;
+            background-color: deepskyblue;
+            color: black;
+        }
+    </style>
 </head>
 
 <body>
