--- a/static/pages/register.html
+++ b/static/pages/register.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rejestracja</title>
+    <style>
+        body {
+            background-color: deepskyblue;
+            align-items: center;
+        }
+    </style>
 </head>
 
 <body>
