--- a/static/pages/login.html
+++ b/static/pages/login.html
@@ -12,6 +12,10 @@
             background-color: deepskyblue;
             color: black;
         }
+
+        a {
+            margin: 0 auto;
+        }
     </style>
 </head>
 
