--- a/static/pages/register.html
+++ b/static/pages/register.html
@@ -9,6 +9,8 @@
         body {
             background-color: deepskyblue;
             align-items: center;
+            font-family: 'Goldman', cursive;
+            color: indigo;
         }
     </style>
 </head>
