--- a/static/pages/login.html
+++ b/static/pages/login.html
@@ -10,11 +10,13 @@
             width: 100%;
             height: 100px;
             background-color: deepskyblue;
-            color: black;
+
         }
 
         a {
             margin: 0 auto;
+            font-family: 'Goldman', cursive;
+            color: indigo;
         }
     </style>
 </head>
