--- a/static/pages/adminlog.html
+++ b/static/pages/adminlog.html
@@ -15,9 +15,11 @@
             width: 100%;
             height: 100px;
             background-color: deepskyblue;
+            position: fixed;
         }
 
         a {
+            position: relative;
             margin: 0 auto;
             font-family: 'Goldman', cursive;
             color: indigo;
