--- a/static/pages/login.html
+++ b/static/pages/login.html
@@ -10,10 +10,12 @@
             width: 100%;
             height: 100px;
             background-color: deepskyblue;
+            position: fixed;
 
         }
 
         a {
+            position: relative;
             margin: 0 auto;
             font-family: 'Goldman', cursive;
             color: indigo;
