--- a/static/pages/main.html
+++ b/static/pages/main.html
@@ -10,9 +10,11 @@
             width: 100%;
             height: 100px;
             background-color: deepskyblue;
+            position: fixed;
         }
 
         a {
+            position: relative;
             margin: 0 auto;
             font-family: 'Goldman', cursive;
             color: indigo;
