--- a/static/pages/adminlog.html
+++ b/static/pages/adminlog.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin</title>
     <style>
+        body {
+            background-color: lightcoral;
+        }
+
         .bt {
             width: 50px;
             height: 25px;
@@ -16,6 +20,8 @@
             height: 100px;
             background-color: deepskyblue;
             position: fixed;
+            border: solid 5px indigo;
+            border-radius: 8px;
         }
 
         a {
