--- a/static/pages/adminunlog.html
+++ b/static/pages/adminunlog.html
@@ -6,11 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin</title>
     <style>
+        body {
+            background-color: lightcoral;
+        }
+
         header {
             width: 100%;
             height: 100px;
             background-color: deepskyblue;
             position: fixed;
+            border: solid 5px indigo;
+            border-radius: 8px;
         }
 
         a {
