--- a/static/pages/adminlog.html
+++ b/static/pages/adminlog.html
@@ -13,6 +13,8 @@
         .bt {
             width: 50px;
             height: 25px;
+            border: solid 1px indigo;
+            background-color: lightcoral;
         }
 
         header {
