--- a/static/pages/register.html
+++ b/static/pages/register.html
@@ -12,6 +12,12 @@
             font-family: 'Goldman', cursive;
             color: indigo;
         }
+
+        a {
+            border: solid 1px indigo;
+            border-radius: 8px;
+            background-color: lightcoral;
+        }
     </style>
 </head>
 
