--- a/static/pages/adminlog.html
+++ b/static/pages/adminlog.html
@@ -14,6 +14,7 @@
             width: 50px;
             height: 25px;
             border: solid 1px indigo;
+            border-radius: 8px;
             background-color: lightcoral;
         }
 
@@ -31,6 +32,9 @@
             margin: 0 auto;
             font-family: 'Goldman', cursive;
             color: indigo;
+            border: solid 1px indigo;
+            border-radius: 8px;
+            background-color: lightcoral;
         }
     </style>
 </head>
