--- a/static/pages/main.html
+++ b/static/pages/main.html
@@ -24,6 +24,9 @@
             margin: 0 auto;
             font-family: 'Goldman', cursive;
             color: indigo;
+            border: solid 1px indigo;
+            border-radius: 8px;
+            background-color: lightcoral;
         }
     </style>
 </head>
