--- a/static/pages/main.html
+++ b/static/pages/main.html
@@ -7,7 +7,7 @@
     <title>Główna</title>
     <style>
         body {
-            background-color: lightcoral;
+            background-color: deepskyblue;
         }
 
         header {
